syntax = "proto3";

package envoy.extensions.early_data.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.early_data.v3";
option java_outer_classname = "DefaultEarlyDataPolicyProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/early_data/v3;early_datav3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: HTTP request early data policy]

// [#extension: envoy.route.early_data_policy.default]
// The default rule to allow/disallow a request to be sent as early data. It's an empty config now. Configuring it will disallow any request to be sent over early data.
message DefaultEarlyDataPolicy {
}
